--- a/public/Frontend/css/blog.css
+++ b/public/Frontend/css/blog.css
@@ -43,6 +43,38 @@
     padding: 1rem;
 }
 
+@media screen and (max-width:685px) {
+    .bg-item .bg-img{
+        width:45% !important;       
+        padding: 0!important;
+        height: 180px;
+
+    }
+
+    .bg-item .bg-contenido{
+        width: 55%!important;
+    }
+
+    .bg-contenido h3{
+        font-size: 16px!important;
+        height: 42px!important;
+    }
+
+    .bg-contenido p{
+        font-size: 12px!important;
+        height: 60px!important;
+        margin-bottom: 15px!important;
+    }
+
+    .bg-contenido a{
+        font-size: 12px!important;
+    }
+
+    .blog .bg-container .bg-item {
+        height: 180px!important;
+    }
+}
+
 .bg-img img{
     width: 100%;
     height: 100%;
